--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
       <!-- animated plus -->
-      <input type="button" id="show_sidebar" value="+" {{ action showSidebar target="view" }}/>
+      <input type="button" id="show_sidebar" value="< " {{ action showSidebar target="view" }}/>
       <div id="social_sidebar">
         {{ partial 'auth' }}
       </div>
