--- a/index.html
+++ b/index.html
@@ -66,8 +66,18 @@
         {{#view App.UserView}}
           <div class="user" id="local">
             <div class="videoOptions">
-              <img src="assets/img/muteButton.png" />
-              <img src="assets/img/videoButton.png" />
+              <div></div>
+              <div id="videoEffectsBar">
+                <progress value="0" max="1" id="progressSnapshotbar"></progress>
+                <div id="videoEffects">
+                  <input type="button" id="snapshotButton" {{action "takeScreenShotFromChatroom" }} class="" value="Take Snapshot"/>
+                  <input type="button" id="getSnapshotButton" class="" value="get Snapshot" style="display:none" />
+                  <input type="button" {{action "putClassesOnUser" }} class="" value="classes" />
+                  <input type="button" {{action "putHairOnUser" }} class="" value="hair" />
+                  <input type="button" {{action "putBeardOnUser" }} class="" value="beard"/>
+                  <input type="button" id="takeOffClothesButton" {{action "takeOffClothesOfUser" }} class="" value="off" style="display:none" />
+                </div>
+              </div>
             </div>
             <span class="name" id="local_name">Name</span>
             <video autoplay></video>
@@ -75,19 +85,10 @@
           </div>
         {{/view}}
         
-        <div id="videoEffectsBar">
-          <progress value="0" max="1" id="progressSnapshotbar"></progress>
-          <div id="videoEffects">
-            <input type="button" id="snapshotButton" {{action "takeScreenShotFromChatroom" }} class="" value="Take Snapshot"/>
-            <input type="button" id="getSnapshotButton" class="" value="get Snapshot" style="display:none" />
-            <input type="button" {{action "putClassesOnUser" }} class="" value="classes" />
-            <input type="button" {{action "putHairOnUser" }} class="" value="hair" />
-            <input type="button" {{action "putBeardOnUser" }} class="" value="beard"/>
-            <input type="button" id="takeOffClothesButton" {{action "takeOffClothesOfUser" }} class="" value="off" style="display:none" />
-          </div>
-        </div>
+        
       </div>
-      <!-- animated plus -->
+      <!-- fake inputfield for a second shadow for the plus button -->
+      <input id="show_sidebar_shadow"/>
       <input type="button" id="show_sidebar" value="< " {{ action showSidebar target="view" }}/>
       <div id="social_sidebar">
         {{ partial 'auth' }}
