--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <span class="name" id="local_name">Name</span>
             <video autoplay></video>
             <canvas id="faceDetectorOutput"></canvas>
+            <progress id="progressSnapshotbar" value="0" max="1"></progress>
             <div id="videoEffects" {{ action 'hideEffects' target="view" }}>
               <input type="button" id="snapshotButton" {{action "takeScreenShotFromChatroom" }} class="" value="Take Snapshot"/>
               <input type="button" id="getSnapshotButton" class="" value="get Snapshot" style="display:none" />
