added datachannel once again

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         <div>iceConnectionState</div>
         <div id="iceConnectionState">-</div>
       </div>
+      <br>
+      <h3>RTCDataChannel Attributes</h3>
+      <div id="rtcDataChannel">
+        <div>reliable</div>
+        <div id="reliable">-</div>
+        <div>readyState</div>
+        <div id="readyState">-</div>
+        <div>bufferedAmount</div>
+        <div id="bufferedAmount">-</div>
+        <div>binaryType</div>
+        <div id="binaryType">-</div>
+      </div>
     </div>
 
     <script type="text/x-handlebars" data-template-name="application">
