roomanimations for infofield changed

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         {{#linkTo "index" id="backButton"}}{{/linkTo}}
         {{#linkTo "hangup" id="hangupButton"}}{{/linkTo}}
       </header>
+      
       <div id="infoField">
-        <p>Bitte Kamera & Mikrofon im Browser aktivieren!</p><br/>
-        <p>Bei Google-Chrome kannst du das an einer Leiste, die gerade am oberen Rand erschienen ist einstellen.</p>
+        <img id="arrow" src="assets/img/chrome-hinweis-pfeil.png"/>
+        <img id="chrome" src="assets/img/chrome-hinweis-browser.png"/>
       </div>
       <div id="videoboxes">
         
