try some sidebarchanges

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <!-- fake inputfield for a second shadow for the plus button -->
     <!--  <input id="show_sidebar_shadow"/> -->
       <div id="social_sidebar_container">
-        <input type="button" id="show_sidebar" value="< " {{ action showSidebar target="view" }}/>
+        <input type="button" id="show_sidebar" value="" {{ action showSidebar target="view" }}/>
         <div id="social_sidebar">
           {{ partial 'auth' }}
         </div>
