worked on datachannel

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
   
       <!-- Facebook-Instance -->
-      <script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
+      <!--<script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
       <script src="assets/js/libs/facebook-sdk-init.js"></script>
   
       <!-- face-detection -->
