--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
       </div>
       <div id="videoboxes">
           <div class="user" id="local">
+            <!--
           {{#view App.UserView}}
             <div class="videoOptions">
               <div class="videoOptionsItems" {{ action muteAudio target="view" }}>
@@ -175,9 +176,18 @@
               </div>
             </div>
           {{/view}}
-  
+  -->
           <span class="name" id="local_name">Name</span>
           <video autoplay></video>
+          
+          {{#view App.UserView}}
+          <div id="video_options">
+            <div class="video_options_buttons" id="control_audio" {{ action controlAudio target="view" }}>on/off Audio</div>
+            <div class="video_options_buttons" id="control_video" {{ action controlVideo target="view" }}>on/off Video</div>
+            <div class="video_options_buttons" id="control_effects" {{ action controlEffects target="view" }}>show/on/off Effects</div>
+          </div>
+          {{/view}}
+          
           <canvas id="faceDetectorOutput"></canvas>
           <div id="videoEffects" {{ action hideEffects target="view" }}>
             <input type="button" id="snapshotButton" {{action "takeScreenShotFromChatroom" }} class="" value="Take Snapshot"/>
