mute, unmuting and kicking via signaling server works now

--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@
       </header>
 
       <div id="videoboxes">
-        <div class="user" id="local">
+        <div class="user local" id="local">
           <span class="name" id="local_name">Name</span>
-          <div class="videoPoster">
+          <div class="videoWrapper">
+            <div class="stateMute"></div>
+            <img src="assets/img/avatar.jpg"/>
             <video autoplay></video>
           </div>
           
