get snapshot-functionality bugs fixed, video&audio-recording functionality added

--- a/test/index.html
+++ b/test/index.html
@@ -42,13 +42,13 @@
     
   <!-- not working ?
     <script type="text/javascript" src="spec/SpecHelper.js"></script>
+  
+  
+  <script type="text/javascript" src="spec/mainSpec.js"></script>
   -->
-  
-  <script type="text/javascript" src="spec/mainSpec.js"></script>-->
-  
-  <!-- this test is working. No it doesnt! ;)
+  <!-- this test is working. No it doesnt! ;)-->
   <script type="text/javascript" src="spec/snapshotSpec.js"></script>
-  -->
+  
   
   <script type="text/javascript">
     (function() {
