video/audio recording buttons recognisze switching on/off video/audio buttons

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           {{/view}}
 
           <div id="videoEffects" {{ action hideEffects target="view" }}>
-            <input type="button" id="snapshotButton" {{action "takeScreenShotFromChatroom" }} value="Take Snapshot"/>
+            <input type="button" id="snapshotButton" class="effectButton" {{action "takeScreenShotFromChatroom" }} value="Snapshot"/>
             <input type="button" {{action "putClassesOnUser" }} class="effectButton" value="classes" />
             <input type="button" {{action "putHairOnUser" }} class="effectButton" value="hair" />
             <input type="button" {{action "putBeardOnUser" }} class="effectButton" value="beard"/>
