fixed size und postition fehler der Videos

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div id="video_options">
             <div class="video_options_buttons" id="control_audio" {{ action controlAudio target="view" }}>on/off Audio</div>
             <div class="video_options_buttons" id="control_video" {{ action controlVideo target="view" }}>on/off Video</div>
-            <div class="video_options_buttons" id="control_effects" {{ action controlEffects target="view" }}>show/on/off Effects</div>
+            <div class="video_options_buttons" id="control_effects" {{ action controlEffects target="view" }}>Effects</div>
           </div>
           {{/view}}
 
