index-html commit

--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
     <script src="assets/js/views/application.js"></script>
     <script src="assets/js/views/index.js"></script>
     <script src="assets/js/views/room.js"></script>
+    <script src="assets/js/views/auth.js"></script>
     <script src="assets/js/views/invitation.js"></script>
     <script src="assets/js/views/user.js"></script>
 
