--- a/index.html
+++ b/index.html
@@ -330,14 +330,13 @@
             Du bist bei keinem dieser Netzwerke? KEIN PROBLEM, schicke einfach eine gute alte <strong>eMail</strong> ;)
         </p>
       </div>
-      <div id="qrcode_box"></div>
-      <div id="friends_of_facebook"></div>
-      <div id="friends_of_google"></div>
-      <div id="friends_of_email">
-        <!-- mail form -->
+      <div class="sidebar_content" id="qrcode_box"></div>
+      <div class="sidebar_content" id="friends_of_facebook"></div>
+      <div class="sidebar_content" id="friends_of_google"></div>
+      <div class="sidebar_content" id="friends_of_email">
         <form id="mail_form">
-          <input type="text" id="mailAddress" placeholder="E-Mail Addresse"/>
-          <input type="text" id="mailDescription" placeholder="E-Mail Beschreibung"/>
+          <input type="text" class="email_input" id="mailAddress" placeholder="E-Mail Addresse"/>
+          <textarea type="text" class="email_input" id="mailDescription" placeholder="E-Mail Beschreibung"></textarea>
           <input type="button" id="mailFormButton" value="Sende E-Mail" {{action "addMailInfo" target="App.Controller.auth"}} />
         </form>
       </div>
