sidebar verbesserung im detail

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <!-- to hide the scrollbar, we need a div whos position is not outside the site -->
       <div id="scrollbar_fix">
         <div id="social_sidebar_container">
-          <input type="button" id="show_sidebar" value="" {{ action showSidebar target="view" }}/>
+          <input type="button" id="show_sidebar" class="sidebar_close" value="" {{ action showSidebar target="view" }}/>
           <div id="show_sidebar_shadow"></div>
           <div id="social_sidebar">
             {{ partial 'auth' }}
