improved help und sidebar

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
           </div>
         </div>
       </div>
+      <div id="glow"></div>
       
       <div id="show_help" {{action "openHelp" target="view"}}>help</div>
       <div id="help">
@@ -233,6 +234,13 @@
              </p>
              <br>
              <img src="assets/img/help/help-01.png"/>
+             <br>
+             <p>
+               Wird Audio oder Video aktiviert, wird am oberen Ende des Browsers eine Leiste eingeblendet. Dort fragt 
+               dich dein Browser ob er auf dein Mikrofon und/oder Kamera zugreifen darf. 
+               Dies musst du mit "<strong>Zulassen</strong>" bestätigen.
+             </p>
+             <img src="assets/img/help/help-04.png"/>
              <br>
              <p>
                Hast du auch Video aktiviert, so siehst du im linken oberen Bereich eines Videos zwei kleine Buttons.
