g+ changed to gmail and emailtab had to be changed

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
              <p><strong>Die Sidebar bietet dir 4 möglichkeiten um Freunde einzuladen:</strong></p>
              <ul>
                <li>Mit Klick auf den Facebookbutton kannst du dich mit Facebook anmelden und wir zeigen dir alle deine Facebookfreunde in der Sidebar an. Diese kannst du dann mit einem einfachen Klick auf ihren Namen einladen.</li>
-               <li>Mit Klick auf den Google+ kannst du dich ebenfalls bei Google anmelden, sofern du dort ein Konto hast, und deine Kontakte von Google werden angezeigt.</li>
+               <li>Mit Klick auf den Google+ kannst du dich ebenfalls bei Google bzw. Gmail anmelden, sofern du dort ein Konto hast, und deine Kontakte von Google werden angezeigt.</li>
                <li>Mit Klick auf eMail kannst du ganz  einfach eine eMail an Freunde schicken, von denen du die Adresse weißt.</li>
                <li>mit Klick auf QRCode wird dir ein QRCode angezeigt den du, mit einer entsprechenden App, Fotografieren kannst. Damit kopierst du einfach nur die Adresse des Raumes auf dein Handy und brauchst diese nicht abtippen. Somit kannst du die Raumadresse an deine Freunde per SMS verschicken.</li>
              </ul>
