get snapshot functionality improved and bugs fixed

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <span class="name" id="local_name">Phovec-Benutzer</span>
           <div class="videoWrapper">
             <div class="stateMute"></div>
-            <img src="assets/img/avatar.jpg"/>
+            <img class='bgAvatar' src="assets/img/avatar.jpg"/>
             <div class="recordLocalVideo"></div>
             <div class="recordLocalAudio"></div>
             <video autoplay></video>
