effect button activity

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div id="video_options">
             <div class="video_options_buttons" id="control_audio" {{ action controlAudio target="view" }}>on/off Audio</div>
             <div class="video_options_buttons" id="control_video" {{ action controlVideo target="view" }}>on/off Video</div>
-            <div class="video_options_buttons" id="control_effects" {{ action controlEffects target="view" }}>Effekte</div>
+            <div class="video_options_buttons disabled" id="control_effects" {{ action controlEffects target="view" }}>Effekte</div>
           </div>
 
 
