--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
           <div id="videoEffects" {{ action hideEffects target="view" }}>
             <div {{action "putGlassesOnUser" }} class="effectButton" id="glasses" ></div>
-            <div {{action "putHairOnUser" }} class="effectButton" id="hair" ></div>
+            <div {{action "putHatOnUser" }} class="effectButton" id="hat" ></div>
             <div {{action "putBeardOnUser" }} class="effectButton" id="beard" ></div>
             <div {{action "effectOff" }} class="effectButton" id="effekt_off" >kein Effekt</div>
             <!-- <input type="button" id="snapshotButton" class="effectButton" {{action "takeScreenShotFromChatroom" }} value="Snapshot"/> -->
