--- a/index.html
+++ b/index.html
@@ -84,22 +84,11 @@
       </div>
     </script>
 
-    <!-- templates -->
+    <!-- templates
     <script type="text/x-handlebars" data-template-name="index">
-      <header>
-      {{#linkTo "about" id="infoButton"}}{{/linkTo}}
-      </header>
 
-      <div id="startInfo">
-      <h1>Videochat mit Deinen Freunden!</h1><br>
-      <p>
-      Einfach auf Start klicken und du bist in einem Chatraum, von wo aus du deine Freunde einladen kannst.
-      </p>
-      <input placeholder="Bitte wählen Sie einen Namen..." id="name"/>
-      </div>
-      <div id="startButtonImage"></div>
     </script>
-
+ -->
     <script type="text/x-handlebars" data-template-name="room-unknown">
       <div id="hangupInfo">
       <div>
@@ -320,73 +309,11 @@
         </div>
       </div>
     </div>
-
+<!--
     <script type="text/x-handlebars" data-template-name="about">
-      <header>
-      {{#linkTo "index" id="backButton"}}{{/linkTo}}
-      </header>
-      <div id="aboutInfo">
-      <div class="leftColumn">
-      <h1>Information</h1>
-      <p>
-      Das ist ein Projekt, welches im Rahmen des Qualifikationsprojektes 3 an der Fachhochschule Salzburg
-      im Schwerpunkt Web + Communities realisiert wird. Mit der innovativen Technik WebRTC werden wir den Benutzern und Benutzerinnen
-      dieser Web-Applikation ermöglichen, Multi-Video-Konferenzen kostenlos ohne der Installation eines Plugin zu führen.
-      </p>
-      <h1>Techniken</h1>
-      <p>
-      Das Zentrale Element stellt die HTML5-JavaScript-Innovation WebRTC dar. Sie ermöglicht in der Zukunft mit jeden beliebigen Browser, ohne der Installation eines Programms oder zusätzlichen Plugins Audio- und Videokonferenzen zu führen und über einen Chat mit Freunden, Familien und Arbeitskollegen zu kommunizieren.
-      <br>
-      <br>
-      Für die Sitzungsherstellung verwenden wir einen Node.JS Server mit MongoDB, welcher Benutzer und Benutzerinnen registriert, untereinander vermittelt und das Erstellen von seperaten Chaträumen ermöglicht.
-      <br>
-      <br>
-      Die Strukturierung und den klaren Aufbau erhalten wir durch das JavaScript-Framework Ember.JS, welches ähnlich einem MVC-Framework arbeitet.
-      </p>
-      </div>
-      <div class="rightColumn">
-      <h1>Entwickler</h1>
-      <p>
-      <ul>
-      <li>
-      <a href="mailto:mtiefenthaler.mmt-b2010@fh-salzburg.ac.at">Michael Tiefenthaler</a>
-      </li>
-      <li>
-      <a href="mailto:fbruenner.mmt-b2010@fh-salzburg.ac.at">Franz Josef Brünner</a>
-      </li>
-      <li>
-      <a href="mailto:lwanko.mmt-b2010@fh-salzburg.ac.at">Lukas Wanko</a>
-      </li>
-      </ul>
-      </p>
-      <h1>Repositories</h1>
-      <p>
-      <ul>
-      <li>
-      <a href="https://github.com/mike-tuxedo/phovec">Github Client</a>
-      </li>
-      <li>
-      <a href="https://github.com/mike-tuxedo/Nodejs_P2P-HandshakeServer">Github Server</a>
-      </li>
-      </ul>
-      </p>
-      <h1>Anschrift</h1>
-      <p>
-      Fachhochschule Salzburg
-      <br>
-      Studiengang Multimediatechnology
-      <br>
-      <br>
-      Urstein Süd 1
-      <br>
-      5020 Salzburg
-      <br>
-      Österreich
-      </p>
-      </div>
-      </div>
+      
     </script>
-
+-->
     <script type="text/x-handlebars" data-template-name="room-hangup">
       <div id="hangupInfo">
       <div>
@@ -453,6 +380,7 @@
     <!-- libs -->
     <script src="assets/js/libs/handlebars-1.0.0-rc.3.js"></script>
     <script src="assets/js/libs/ember-1.0.0-rc.1.js"></script>
+    <script src="assets/js/helpers/templateLoader.js"></script>
 
     <!-- browser compatiblity -->
     <script src="assets/js/helpers/browser.js"></script>
